bug#34348 01_acc.diff In ACC, hash expand fails if fragment top level directory is full (256). Instead of crash, set a flag on fragment and return error on any insert. The flag is cleared when a hash shrink takes place.